# waffle

./: Cargo.toml  LICENSE.txt  README.md  build.rs
examples/: palette.pal
resources/gtk/: color_picker.ui  menus.ui  palette_picker.ui  resources.gresource.xml  tile_picker.ui  tilemap_editor.ui  window.ui
src/: main.rs  undo_stack.rs  utils.rs
src/data/: color.rs  file_format.rs  list_items.rs  mod.rs  palette.rs  tilemap.rs  tiles.rs
src/widgets/: mod.rs
src/widgets/color_picker/: imp.rs  mod.rs  operation.rs
src/widgets/palette_picker/: imp.rs  mod.rs  utils.rs
src/widgets/tile_picker/: imp.rs  mod.rs
src/widgets/tilemap_editor/: imp.rs  mod.rs  operation.rs  utils.rs
src/widgets/window/: imp.rs  mod.rs
