[package]
name = "waffle"
version = "0.2.0"
edition = "2021"

[dependencies]
gtk = { version = "0.9.4", package = "gtk4", features = ["v4_6"] }
itertools = "0.13.0"
strum = { version = "0.26", features = ["derive"] }
modular-bitfield = "0.11.2"
enum_dispatch = "0.3.13"

[build-dependencies]
glib-build-tools = "0.20.0"
